--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   provider: ^6.0.3
 
   geolocator: ^7.0.3
-
+  
   get_storage:
 
 dev_dependencies:
@@ -54,7 +54,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.10.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/apple.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
